ignore 확인 및 1일차 내용 추가 기본 테스트 및 lombok 생성

--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,13 @@ repositories {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.projectlombok:lombok')
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    
+    // lombok 의존성 사용을 위한 추가 구문, 자세한 의미 알아볼 것
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 }
+
+
