--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'io.spring.dependency-management'
 
 group 'com.jojoldu.book'
 version '1.0-SNAPSHOT'
-sourceCompatibility = 1.8
+//sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -27,8 +27,12 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.projectlombok:lombok')
 
+    // JPA 의존성 추가
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('com.h2database:h2')
+
+    //Mustache 의존성 추가
+    implementation('org.springframework.boot:spring-boot-starter-mustache')
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
