--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.driverClassName=org.h2.Driver
 
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
+
+spring.profiles.include=oauth
