네이버 로그인 연동 추가 및 테스트 코드 수정

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.springframework.security:spring-security-test')
+    //db 연결 추가
+    implementation('org.springframework.session:spring-session-jdbc')
 
     // lombok 의존성 사용을 위한 추가 구문, 자세한 의미 알아볼 것
     compileOnly 'org.projectlombok:lombok'
