--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
 
 spring.profiles.include=oauth
+
+spring.session.store-type=jdbc
